--- a/requirements.txt
+++ b/requirements.txt
@@ -51,9 +51,6 @@ jupyterlab_server==2.25.0
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
 mistune==3.0.1
-mkl-fft==1.3.8
-mkl-random==1.2.4
-mkl-service==2.4.0
 names==0.3.0
 nbclient==0.8.0
 nbconvert==7.8.0
@@ -97,6 +94,7 @@ setuptools==68.2.2
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
+SQLAlchemy==2.0.21
 stack-data==0.6.2
 terminado==0.17.1
 tinycss2==1.2.1
